--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 /* nejsme vcerejsi, pouzivame moderni a intuitivni box model */
-html { box-sizing: border-box; }
-*, ::after, ::before { box-sizing: inherit; }
+html {
+  box-sizing: border-box;
+}
+
+*,
+::after,
+::before {
+  box-sizing: inherit;
+}
 
 /*
  BARVY
@@ -15,5 +22,91 @@ html { box-sizing: border-box; }
 
 
 body {
-    background-color: #bdc3c7;
+  background-color: #bdc3c7;
+  width           : 250px;
+  padding         : 0;
+  margin          : 0;
 }
+
+.profil {
+  background-color: #bdc3c7;
+  width           : 250px;
+  padding         : 0;
+  margin          : 0;
+}
+
+.hlavicka {
+  padding         : 0;
+  margin          : 0;
+  background-color: #31363b;
+
+}
+
+.logo {
+  border-radius   : 50%;
+  background-color: #b92e81;
+  position        : absolute;
+  left            : 170px;
+  top             : 140px;
+}
+
+.foto {
+  width  : 250px;
+  margin : 0;
+  padding: 0;
+}
+
+
+
+.obsah {
+  width           : 250px;
+  font-family     : 'Source Sans Pro', sans-serif;
+  font-size       : 13px;
+  color           : white;
+  text-align      : left;
+  background-color: #31363b;
+  padding         : 20px 10%;
+  margin          : 0;
+}
+
+.jmeno {
+  font-family: 'Montserrat', sans-serif;
+  font-size  : 25px;
+}
+
+.odkazy {
+  width           : 250px;
+  margin          : 0;
+  padding         : 0;
+  display         : inline-block;
+  background-color: #31363b;
+  text-align      : center;
+}
+
+.odkazy li {
+  display: inline-block;
+  }
+
+.odkazy a {
+  font-family    : 'Montserrat', sans-serif;
+  font-size      : 10px;
+  color          : white;
+  text-decoration: none;
+  display        : inline-block;
+  padding        : 10px 50px;
+  margin: 1px;
+  outline        : 1px solid #3f464d;
+    }
+
+.portfolio a:hover {
+  background-color: #e74c3c;
+}
+
+.facebook a:hover {
+  background-color: #3b5998;
+}
+
+.twitter a:hover {
+  background-color: #1da1f2;
+}
+
